<resources>
    <string name="app_name">Mobilete</string>
    <string name="facebook_app_id">182271082687589</string>
    <string name="fb_login_protocol_scheme">fb182271082687589</string>
    <string name="mobilete_logo">Mobilete Logo</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="inf_email_senha">Informe E-mail e Senha para continuar</string>
    <string name="cadastrese">
        <u>Cadastre-se</u>
    </string>
    <string name="alterar_foto">
        <u>Alterar foto</u>
    </string>
    <string name="tirar_foto">
        <u>Tirar Foto</u>
    </string>
    <string name="cadastrar">Cadastrar</string>
    <string name="foto">Foto</string>
    <string name="anuncios">Anuncios</string>
    <string name="perfil">Perfil</string>
    <string name="criar_anuncio">Criar Anuncio</string>
    <string name="sobre">Sobre</string>
    <string name="abre">Abre</string>
    <string name="fecha">Fecha</string>
    <string name="sair">Sair</string>
    <string name="descricao">Descrição</string>
    <string name="validade_da_oferta_produto">Validade da Oferta/Produto</string>
    <string name="valor">Valor</string>
    <string name="mapa">Mapa</string>
    <string name="validade">Validade</string>
    <string name="local">Local</string>
    <string name="salvar">Salvar</string>
    <string name="procurar">Procurar</string>
    <string name="tituloApp">Mobilete</string>
    <string name="meus_anuncios">Meus Anuncios</string>
    <string name="texto_sobre">Este aplicativo foi feito com o intuito de me formar já que eu preciso de 4 créditos de
        tópicos profissionalizantes.
    </string>
    <string name="descriptionImgProduto">Imagem Produto</string>
    <string name="anuncios_interessantes">Anuncios interessantes</string>
    <string name="atualizar">Atualizar</string>
    <string name="preferencias">Preferencias</string>
    <string name="busca">Busca</string>
    <string name="resultado">Resultado</string>

</resources>
