<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CadastroUsuarioActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@mipmap/fundo_round">
    <requestFocus />

    <ImageView
            android:id="@+id/imgUsuario"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alterar_foto"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:id="@+id/linearForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/edtNome"
                style="@style/FormEditText"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/nome"
                android:autofillHints="@string/nome"
                android:drawableStart="@drawable/ic_person_grey_24dp"/>

        <EditText
                android:id="@+id/edtEmail"
                style="@style/FormEditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_email_grey_24dp"/>

        <EditText
                android:id="@+id/edtTelefone"
                style="@style/FormEditText"
                android:inputType="phone"
                android:hint="@string/telefone"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_local_phone_grey_24dp"/>

        <EditText
                android:id="@+id/edtSenha"
                style="@style/FormEditText"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:autofillHints="@string/senha"
                android:drawableStart="@drawable/ic_key_grey_24dp"/>

    </LinearLayout>

    <com.dd.processbutton.FlatButton
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@color/colorPrimaryDark"
            custom:pb_colorPressed="@color/colorPrimary"/>

    <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_gravity="center"
            custom:matProg_barColor="@color/colorPrimary"
            custom:matProg_progressIndeterminate="true" />


</LinearLayout>