<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        android:background="@mipmap/fundo">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:background="@android:color/transparent"
            android:contentDescription="@string/mobilete_logo"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:background="@drawable/trans_retangulo">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/inf_email_senha"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>

                <EditText
                        android:id="@+id/edtEmail"
                        style="@style/FormEditText"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:autofillHints="@string/email"
                        android:drawableLeft="@drawable/ic_email_grey_24dp"/>

                <EditText
                        android:id="@+id/edtSenha"
                        style="@style/FormEditText"
                        android:inputType="textPassword"
                        android:hint="@string/senha"
                        android:imeOptions="actionDone"
                        android:autofillHints="@string/senha"
                        android:drawableLeft="@drawable/ic_key_grey_24dp"/>

                <com.dd.processbutton.FlatButton
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        custom:pb_colorNormal="@color/colorPrimaryDark"
                        custom:pb_colorPressed="@color/colorPrimary"/>

            <TextView
                    android:id="@+id/txtCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cadastrase"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" tools:ignore="HardcodedText"/>

        </LinearLayout>


        <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFbLogin"
                android:text="Facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />


</LinearLayout>