<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".scenarios.usuario.PerfilActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@mipmap/fundo_round">


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUsuario"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                custom:civ_border_width="2dp"
                custom:civ_border_color="@android:color/white"/>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/btnMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="15dp"
                custom:fab_addButtonColorNormal="@color/colorPrimaryDark"
                custom:fab_addButtonColorPressed="@color/colorPrimary"
                custom:fab_icon="@drawable/ic_add_a_photo_white_24dp"
                custom:fab_labelsPosition="right">

            <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:fab_colorNormal="@color/colorPrimaryDark"
                    custom:fab_colorPressed="@color/colorPrimary"
                    custom:fab_icon="@drawable/ic_add_a_photo_white_24dp"
                    custom:fab_size="mini"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnGaleria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:fab_colorNormal="@color/colorPrimaryDark"
                    custom:fab_colorPressed="@color/colorPrimary"
                    custom:fab_icon="@drawable/ic_collections_black_24dp"
                    custom:fab_size="mini"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </FrameLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
            android:id="@+id/linearForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/edtNome"
                style="@style/FormEditText"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/nome"
                android:autofillHints="@string/nome"
                android:drawableStart="@drawable/ic_person_grey_24dp"/>

        <EditText
                android:id="@+id/edtTelefone"
                style="@style/FormEditText"
                android:inputType="phone"
                android:hint="@string/telefone"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_local_phone_grey_24dp"/>

        <TextView
                android:id="@+id/txtPreferencias"
                style="@style/FormEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/preferencias"
                android:drawableStart="@drawable/ic_star_grey_24dp"/>

        <com.anton46.collectionitempicker.CollectionPicker
                android:id="@+id/collection_picker"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                custom:cp_addIcon="@drawable/ic_add_circle_black_24dp"
                custom:cp_cancelIcon="@drawable/ic_delete_black_24dp"
                custom:cp_itemBackgroundNormal="@android:color/black"
                custom:cp_itemBackgroundPressed="@color/colorPrimary"
                custom:cp_itemMargin="5dp"
                custom:cp_textPaddingBottom="5dp"
                custom:cp_textPaddingLeft="10dp"
                custom:cp_textPaddingRight="10dp"
                custom:cp_textPaddingTop="5dp"
                custom:cp_simplified="false"
                custom:cp_itemRadius="50dp"/>


        <com.dd.processbutton.FlatButton
                android:id="@+id/btnAtualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/atualizar"
                android:textColor="@android:color/white"
                custom:pb_colorNormal="@color/colorPrimaryDark"
                custom:pb_colorPressed="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
